test/interp/spec/get_local.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/get_local.wast
(;; STDOUT ;;;
assert_invalid error:
  third_party/testsuite/get_local.wast:92:65: type mismatch of function result. got i32, expected i64
  (module (func $type-local-num-vs-num (result i64) (local i32) (get_local 0)))
                                                                ^
assert_invalid error:
  third_party/testsuite/get_local.wast:96:61: type mismatch of convert op. got f32, expected i32
  (module (func $type-local-num-vs-num (local f32) (i32.eqz (get_local 0))))
                                                            ^
assert_invalid error:
  third_party/testsuite/get_local.wast:100:65: type mismatch of unary op. got i64, expected f64
  (module (func $type-local-num-vs-num (local f64 i64) (f64.neg (get_local 1))))
                                                                ^
assert_invalid error:
  third_party/testsuite/get_local.wast:108:65: type mismatch of function result. got i32, expected i64
  (module (func $type-param-num-vs-num (param i32) (result i64) (get_local 0)))
                                                                ^
assert_invalid error:
  third_party/testsuite/get_local.wast:112:61: type mismatch of convert op. got f32, expected i32
  (module (func $type-param-num-vs-num (param f32) (i32.eqz (get_local 0))))
                                                            ^
assert_invalid error:
  third_party/testsuite/get_local.wast:116:65: type mismatch of unary op. got i64, expected f64
  (module (func $type-param-num-vs-num (param f64 i64) (f64.neg (get_local 1))))
                                                                ^
assert_invalid error:
  third_party/testsuite/get_local.wast:124:59: local variable out of range (max 2)
  (module (func $unbound-local (local i32 i64) (get_local 3)))
                                                          ^
assert_invalid error:
  third_party/testsuite/get_local.wast:128:57: local variable out of range (max 2)
  (module (func $large-local (local i32 i64) (get_local 14324343)))
                                                        ^^^^^^^^
assert_invalid error:
  third_party/testsuite/get_local.wast:133:59: local variable out of range (max 2)
  (module (func $unbound-param (param i32 i64) (get_local 2)))
                                                          ^
assert_invalid error:
  third_party/testsuite/get_local.wast:137:57: local variable out of range (max 2)
  (module (func $large-param (local i32 i64) (get_local 714324343)))
                                                        ^^^^^^^^^
assert_invalid error:
  third_party/testsuite/get_local.wast:142:71: local variable out of range (max 3)
  (module (func $unbound-mixed (param i32) (local i32 i64) (get_local 3)))
                                                                      ^
assert_invalid error:
  third_party/testsuite/get_local.wast:146:69: local variable out of range (max 3)
  (module (func $large-mixed (param i64) (local i32 i64) (get_local 214324343)))
                                                                    ^^^^^^^^^
10/10 tests passed.
;;; STDOUT ;;)
